--- a/principal.html
+++ b/principal.html
@@ -7,19 +7,31 @@
 
 	<title>Fotografia</title>
 
+<link rel="icon" href="imagens/logo.png">
 	<link rel="stylesheet" type="text/css" href="css/fotografia.css">
+
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;500;700&display=swap" rel="stylesheet">
+
 </head>
 
 
 <body>
-
-<div class="site">
 	
-</div>
+<h1 class="h1"> <a href="sobre.html"
+target="blank"
+title="Clique Aqui">
+Sobre >
+</a> 
+</h1>
 
-<div class="imagem">
-	
+<h2 class="centro">
+	Laranja Metade
+</h2>
 
+<div class="foto">
+	<img src="imagens/petalas.jpg">
 </div>
 
 
