--- a/principal.html
+++ b/principal.html
@@ -19,12 +19,18 @@
 
 <body>
 	
+<div class="logo">
+	<img src="imagens/logo.png">
+</div>
+
 <h1 class="h1"> <a href="sobre.html"
 target="blank"
 title="Clique Aqui">
 Sobre >
 </a> 
 </h1>
+
+
 
 <h2 class="centro">
 	Laranja Metade
@@ -33,11 +39,6 @@ Sobre >
 <div class="foto">
 	<img src="imagens/petalas.jpg">
 </div>
-
-
-	
-	
-
 
 
 </body>
