--- a/servico.html
+++ b/servico.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-	<title>Serviço</title>
+	<title>Serviços</title>
 
 	<link rel="icon" href="imagens/logo.png">
 	<link rel="stylesheet" type="text/css" href="css/fotografia.css">
@@ -13,6 +13,10 @@
 
 </head>
 <body>
+
+<div class="logo">
+	<img src="imagens/logo.png">
+</div>
 
 <h1 class="h1"><a class="link" href="comentario.html"
 target="blank"
@@ -30,9 +34,9 @@ Eles dizem >
 
 </div>
 
-<p class="centro">
-	De uma simples Sessão fotográfica em Estúdio à <b> Fotoreportagem e Vídeoreportagem de Casamentos </b> e eventos festivos, temos à disposição, todos os serviços de fotografia e vídeo necessários, para garantir um registo profissional e de qualidade, de todos os momentos mágicos e especiais. Serviços disponíveis: Fotografia de Casamento, Filme de Casamento, Elopement Wedding, Drone (filmagens aéreas), Same-Day Edit (edição do vídeo no dia), Álbum de Fotografias de Casamento (Álbum Digital / Books de Casamento), Serviço de Photobooth (cabine fotográfica), Sessão Trash-the-Dress, Engagement Session (Sessão de Solteiros), Sessão fotográfica de Grávida ou Pregnancy, Sessão fotográfica de Recém-Nascidos ou New-Baby Born Sessions.
-</p>
+<h3 class="texto">
+	De uma simples Sessão fotográfica em Estúdio à <b> Fotoreportagem e Vídeoreportagem de Casamentos </b> e eventos festivos, temos à disposição, todos os serviços de fotografia e vídeo necessários, para garantir um registo profissional e de qualidade, de todos os momentos mágicos e especiais. Serviços disponíveis:
+</h3>
 
 <div class="lista">
 	<ul>  <li>Fotografia de Casamento</li>
@@ -49,13 +53,13 @@ Eles dizem >
 	
 	<div class="lado1">
 	
-	<img src="imagens/casal.jpg">
+	<img src="imagens/cinco.jpg">
 	</div>
 
 
 <div class="lado2">
 	
-	<img src="imagens/pessoas.jpg">
+	<img src="imagens/casal.jpg">
 </div>
 
 </div>
