--- a/sobre.html
+++ b/sobre.html
@@ -15,7 +15,11 @@
 
 </head>
 <body>
-	
+
+<div class="logo">
+	<img src="imagens/logo.png">
+</div>
+
 <h1 class="h1"><a class="link" href="servico.html"
 target="blank"
 title="Clique Aqui">
@@ -61,7 +65,7 @@ Serviços >
 </div>
 
 
-<h4 class="borda">
+<h4 class="esquerda">
 	Rui Da Cruz: CEO 
 
 </h4>
@@ -76,7 +80,7 @@ Serviços >
 </div>
 
 
-<h4 class="enquadramento">
+<h4 class="direita">
 	Rita DaCruz: Fotógrafa e Editora
 
 </h4>
@@ -89,7 +93,7 @@ Serviços >
 	<img src="imagens/marta.jpg">
 </div>
 
-<h4 class="borda">
+<h4 class="esquerda">
 	Marta Araújo: Videomarker
 
 </h4>
@@ -103,7 +107,7 @@ Serviços >
 	<img src="imagens/sergio.jpg">
 </div>
 
-<h4  class="enquadramento">
+<h4  class="direita">
 	Sérgio Pipe: Videomarker
 
 </h4>
