--- a/comentario.html
+++ b/comentario.html
@@ -14,6 +14,10 @@
 </head>
 <body>
 
+	<div class="logo">
+	<img src="imagens/logo.png">
+</div>
+
 
 <h1 class="h1"> <a class="link" href="principal.html"
 target="blank"
